Overflow error resolved #2

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 75vh;
+  overflow-x: hidden;
   margin-bottom: 150px;
 }
 
