--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -3,7 +3,9 @@
 .experience-container {
   background-image: url("../../assets/Bottom-bg.png");
   box-sizing: border-box;
+ 
   overflow: hidden;
+  overflow-x: hidden;
 }
 
 .experience {
