--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -4,6 +4,7 @@
   background: url("../../assets/Bg-top.png");
   background-size: cover;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .hero .hero-title {
